# switch_control

./: .gitignore  CNAME  README.md  build_ui_and_run.sh  bun.lockb  dev_ui.sh  dl.sh  index.html  package.json  run.sh  setup.sh  zensical.toml
.github/workflows/: docs.yml
backend/: .gitignore  pyproject.toml  pyproject_old.toml
backend/backend/: README.md  Switch_Control_8ChTree_DPDT.py  ampProtector.py  ampProtector_old.py  client_keysight33622A.py  client_keysightE36312A.py  client_teledyneT3AFG200.py  database.db  db.py  keysight33622A.py  keysightE36312A.py  location.py  main.py  models.py  node.py  numatoRelay.py  pulse_controller.py  system_settings.example.yml  system_settings.yml  teledyneT3AFG200.py  teledyneT3PS.py  verification.py  visaInst.py
backend/backend/switch_web/: index.html
backend/backend/switch_web/assets/: index-CT8yhMv0.js  index-lqXlJcRJ.css
docs/: architecture.md  configuration.md  index.md  quickstart.md
switch_control/: .prettierrc  build.ts  bun.lockb  index.html  package-lock.json  package.json  vite.config.ts
switch_control/src/: App.svelte  api.ts  app.css  configuration.svelte.ts  dialog.css  main.ts  state.svelte.ts  svelte-qrcode.d.ts  sync.svelte.ts  tree_state.svelte.ts  types.ts
switch_control/src-tauri/: Cargo.toml  tauri.conf.json
switch_control/src-tauri/capabilities/: migrated.json
switch_control/src-tauri/src/: main.rs
switch_control/src/lib/: ConfigurationHistoryDialog.svelte  CryoCheck.svelte  DotMenu.svelte  GeneralButton.svelte  Menu.svelte  MenuDialog.svelte  NewConfigurationPopover.svelte  (+8 more)
