[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.7",
    "pyserial>=3.5",
    "pyvisa>=1.15.0",
    "pywebview[qt5]>=5.4 ; sys_platform == 'linux'",
    "pywebview[qt]>=5.4 ; sys_platform != 'linux'",
    "requests>=2.32.3",
    "sqlmodel>=0.0.24",
]
