[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.7",
    "pyobjc>=11.1 ; sys_platform != 'linux'",
    "pyserial>=3.5",
    "pyvisa>=1.15.0",
    "pyvisa-py>=0.8.0",
    "pywebview[qt5]>=6.0 ; sys_platform == 'linux'",
    "pywebview[qt]>=6.0 ; sys_platform != 'linux'",
    "requests>=2.32.3",
    "sqlmodel>=0.0.24",
]
